# agno_os_basketball_ai

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  template.env
.github/skills/create-game-report/: SKILL.md
.github/skills/create-game-report/scripts/: get_game_data.py
src/: main.py
src/agents/: analyst_agent.py  data_agent.py  game_report_agent.py  visual_agent.py
src/teams/: data_analysis_team.py
src/utils/: agent_instructions.py  config.py  knowledge_base.py  logger.py  mlflow_tracer.py
src/workflow/: generate_game_report.py
tests/: test_arize_phoenix_team.py  test_knowledge_base.py  test_mlflow_issue_team.py  test_skill_agent.py  test_team.py
