[project]
name = "agno-os-basketball-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.1.4",
    "anthropic>=0.69.0",
    "basketintelligence",
    "bson>=0.5.10",
    "chonkie[openai]>=1.4.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.0",
    "fastmcp>=2.13.0.2",
    "mcp>=1.17.0",
    "mlflow>=3.5.0",
    "openai>=2.5.0",
    "pypdf>=6.1.3",
    "qdrant-client>=1.15.1",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
basketintelligence = { url = "https://github.com/zhenxiay/BasketIntelligence/releases/download/v1.0.2/BasketIntelligence-1.0.2-py3-none-any.whl" }
